k8s/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: immich
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:16-vectorchord0.5.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: immich-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  ports:
    - port: 5432
  selector:
    app: immich-postgres
